add segmented SSB

--- a/notebooks/segmented-SSB.ipynb
+++ b/notebooks/segmented-SSB.ipynb
@@ -1139,7 +1139,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f04ef125df44166a7702c3953ab4ef0",
+       "model_id": "39a09c98ad204abc9f9689f3b5f1a4cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1152,7 +1152,7 @@
     }
    ],
    "source": [
-    "#| label: app:annular_segmented_ssb\n",
+    "#| label: app:segmented_ssb\n",
     "display(\n",
     "    ipywidgets.VBox(\n",
     "        [\n",
@@ -1164,7 +1164,6 @@
     "                    ipywidgets.HBox([inner_collection_angle_slider,outer_collection_angle_slider]),\n",
     "                    ipywidgets.HBox([number_of_segments_slider,rotation_offset_slider]),\n",
     "                    ipywidgets.HBox([number_of_rings_slider,rotate_half_the_rings,area_toggle]),\n",
-    "                    ipywidgets.HTML(\"<hr>\",layout=ipywidgets.Layout(width=\"640px\")),\n",
     "                ]\n",
     "            ),\n",
     "            fig.canvas\n",
