--- a/notebooks/segmented-icom.ipynb
+++ b/notebooks/segmented-icom.ipynb
@@ -8,7 +8,7 @@
     "---\n",
     "title: Segmented iCOM\n",
     "authors: [Julie Marie Bekkevold, Georgios Varnavides]\n",
-    "date: 2024-09-30\n",
+    "date: 2025-04-09\n",
     "---"
    ]
   },
@@ -875,7 +875,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33381ce49827498ea88521fa9c314fc9",
+       "model_id": "8049a072d5274761905f3d5fcafc012f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -888,7 +888,7 @@
     }
    ],
    "source": [
-    "#| label: app:annular_segmented_icom\n",
+    "#| label: app:segmented_icom\n",
     "# iCOM Annular Segmented Detectors\n",
     "\n",
     "display(\n",
