adding pixelated ptycho, restructuring

--- a/notebooks/08_segmented-parallax.ipynb
+++ b/notebooks/08_segmented-parallax.ipynb
@@ -198,7 +198,6 @@
     "    # we then take the inverse FFT, and normalize s.t. np.sum(np.abs(probe_array)**2) = 1.0\n",
     "    probe_array = np.fft.ifft2(probe_array_fourier) * n\n",
     "    \n",
-    "    \n",
     "    intensities = ctf.simulate_data(\n",
     "        complex_obj,\n",
     "        probe_array,\n",
@@ -964,7 +963,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0d63f6d0f3f4f04acadc28a8d8fb74a",
+       "model_id": "168f55bb816a40d4bc73c204f9a55675",
        "version_major": 2,
        "version_minor": 0
       },
@@ -978,8 +977,7 @@
     }
    ],
    "source": [
-    "#| label: app:annular_segmented_icom\n",
-    "# iCOM Annular Segmented Detectors\n",
+    "#| label: app:segmented_parallax\n",
     "\n",
     "ipywidgets.VBox(\n",
     "    [\n",
