pushing not quite finished ssb

--- a/notebooks/00_static_analytical_ctfs.ipynb
+++ b/notebooks/00_static_analytical_ctfs.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 173,
    "id": "66196d22-6664-47ad-83e6-3b6a54cdb056",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 174,
    "id": "0c8f0250-3c12-494e-aed9-99bdafcc0ff8",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,6 @@
     "\n",
     "scan_step_size = 1 # pixels\n",
     "sx = sy = n//scan_step_size\n",
-    "phi0 = 1.0\n",
     "C10 = 0\n",
     "\n",
     "cmap = cmr.viola"
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 175,
    "id": "a0561c49-a11e-4414-b017-c4e474a56ed8",
    "metadata": {},
    "outputs": [],
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 176,
    "id": "94255fb5-7bb7-47b5-ab0a-48a372bf0050",
    "metadata": {},
    "outputs": [],
@@ -107,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 177,
    "id": "be5d9df8-fad3-45be-a44a-6beb654e88c4",
    "metadata": {},
    "outputs": [],
@@ -129,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 178,
    "id": "7ccd46e7-792b-4de7-8db7-c9bb86e797ac",
    "metadata": {},
    "outputs": [
@@ -190,8 +189,146 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 179,
+   "id": "a042a47c-fd70-4ca5-b0e8-235f06a2f533",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def return_aperture_overlap(\n",
+    "#     complex_probe,\n",
+    "#     ind_x,\n",
+    "#     ind_y,\n",
+    "# ):\n",
+    "#     \"\"\" \"\"\"\n",
+    "\n",
+    "#     shifted_probe_plus = np.roll(complex_probe,(-ind_x,-ind_y),axis=(0,1))\n",
+    "#     shifted_probe_minus = np.roll(complex_probe,(ind_x,ind_y),axis=(0,1))\n",
+    "\n",
+    "#     gamma = complex_probe.conj() * shifted_probe_minus - complex_probe * shifted_probe_plus.conj()\n",
+    "    \n",
+    "#     return gamma\n",
+    "\n",
+    "# def return_ssb_ctf(\n",
+    "#     complex_probe,\n",
+    "#     progress_bar = False\n",
+    "# ):\n",
+    "#     \"\"\" \"\"\"\n",
+    "#     gamma_array = np.zeros((n,n))\n",
+    "    \n",
+    "#     for ind_x in range(n):\n",
+    "#         for ind_y in range(n):\n",
+    "#             omega = q[ind_x,ind_y]\n",
+    "#             if omega < 2*q_probe:\n",
+    "#                 gamma_array[ind_x,ind_y] = np.abs(\n",
+    "#                     return_aperture_overlap(\n",
+    "#                         complex_probe,\n",
+    "#                         ind_x,\n",
+    "#                         ind_y\n",
+    "#                     )\n",
+    "#                 ).sum() / 2\n",
+    "                \n",
+    "#     return gamma_array   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "6a13902e-8725-4bdb-ac0c-53418bfc509d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ssb_ctf = return_ssb_ctf(\n",
+    "#     probe_array_fourier\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "4fb6a21b-56a9-48b3-9222-0f12098a79c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.imshow(\n",
+    "#     np.fft.fftshift(\n",
+    "#         ssb_ctf\n",
+    "#     )\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "4f556ec0-deaf-4438-9d2d-cb3c635b9cce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def compute_weighted_ctf(\n",
+    "#     complex_probe,\n",
+    "#     corner_centered_masks,\n",
+    "#     progress_bar = False\n",
+    "# ):\n",
+    "#     \"\"\" \"\"\"\n",
+    "#     ctf = np.zeros((n,n))\n",
+    "#     masks = np.array(corner_centered_masks)\n",
+    "#     asymmetric_masks = (masks - np.roll(masks[:,::-1,::-1],(1,1),(1,2)))/2\n",
+    "#     symmetric_masks = (masks + np.roll(masks[:,::-1,::-1],(1,1),(1,2)))/2\n",
+    "\n",
+    "#     aperture = np.abs(complex_probe)\n",
+    "#     gamma = -np.angle(complex_probe)\n",
+    "#     for symm_mask,asymm_mask in tqdm.tqdm(zip(symmetric_masks,asymmetric_masks),total=symmetric_masks.shape[0], disable = not progress_bar):\n",
+    "#         for i in range(n):\n",
+    "#             for j in range(n):\n",
+    "#                 shifted_aperture = np.roll(aperture,(-i,-j),(0,1))\n",
+    "#                 shifted_gamma = np.roll(gamma,(-i,-j),(0,1))\n",
+    "#                 real_part = np.sum(aperture * shifted_aperture * symm_mask * np.sin(gamma-shifted_gamma))\n",
+    "#                 imag_part = np.sum(aperture * shifted_aperture * asymm_mask * np.cos(gamma-shifted_gamma))\n",
+    "#                 ctf[i,j] += np.abs(real_part + 1j*imag_part)\n",
+    "                \n",
+    "#     return ctf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "7d2065b9-5abe-44d6-99d8-9cc67e9a1312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# weighted_ctf = compute_weighted_ctf(\n",
+    "#     probe_array_fourier,\n",
+    "#     masks,\n",
+    "#     progress_bar=True\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "1e3af987-9ee1-4ae3-816f-1de26460ccd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.imshow(\n",
+    "#     np.fft.fftshift(\n",
+    "#         weighted_ctf\n",
+    "#     )\n",
+    "# )\n",
+    "# plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6a3392b0-402f-4f48-bba1-0828567edeb5",
+   "id": "6f3e177e-6741-4bc2-801e-7b6de8a26356",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65702aca-4b21-45e9-a418-8b1ad9a281e2",
    "metadata": {},
    "outputs": [],
    "source": []
