updated pixelated iCOM section

--- a/notebooks/00_static_analytical_ctfs.ipynb
+++ b/notebooks/00_static_analytical_ctfs.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 35,
    "id": "66196d22-6664-47ad-83e6-3b6a54cdb056",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 36,
    "id": "0c8f0250-3c12-494e-aed9-99bdafcc0ff8",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 37,
    "id": "a0561c49-a11e-4414-b017-c4e474a56ed8",
    "metadata": {},
    "outputs": [],
@@ -71,8 +71,8 @@
     "    ),\n",
     ")\n",
     "\n",
-    "\n",
-    "probe_array_fourier = probe_array_fourier_0 * np.exp(-1j * np.pi * wavelength * q**2 * C10)\n",
+    "unrolled_chi = np.pi * wavelength * q**2 * C10\n",
+    "probe_array_fourier = probe_array_fourier_0 * np.exp(-1j * unrolled_chi)\n",
     "probe_array_fourier /= np.sqrt(np.sum(np.abs(probe_array_fourier)**2))"
    ]
   },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 38,
    "id": "94255fb5-7bb7-47b5-ab0a-48a372bf0050",
    "metadata": {},
    "outputs": [],
@@ -101,12 +101,12 @@
     "\n",
     "def asymmetric_array_correlation(array1,array2):\n",
     "    \"\"\" \"\"\"\n",
-    "    return array_correlation(array1,array2) - array_correlation(array2,array1)"
+    "    return array_correlation(array1,array2) - array_correlation(array2,array1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 39,
    "id": "be5d9df8-fad3-45be-a44a-6beb654e88c4",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 40,
    "id": "7ccd46e7-792b-4de7-8db7-c9bb86e797ac",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 41,
    "id": "a042a47c-fd70-4ca5-b0e8-235f06a2f533",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 42,
    "id": "6a13902e-8725-4bdb-ac0c-53418bfc509d",
    "metadata": {},
    "outputs": [],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 43,
    "id": "4fb6a21b-56a9-48b3-9222-0f12098a79c8",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 44,
    "id": "4f556ec0-deaf-4438-9d2d-cb3c635b9cce",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 45,
    "id": "7d2065b9-5abe-44d6-99d8-9cc67e9a1312",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 46,
    "id": "1e3af987-9ee1-4ae3-816f-1de26460ccd4",
    "metadata": {},
    "outputs": [],
