add parallax formalism

--- a/notebooks/00_static_analytical_ctfs.ipynb
+++ b/notebooks/00_static_analytical_ctfs.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "66196d22-6664-47ad-83e6-3b6a54cdb056",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "0c8f0250-3c12-494e-aed9-99bdafcc0ff8",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "a0561c49-a11e-4414-b017-c4e474a56ed8",
    "metadata": {},
    "outputs": [],
@@ -62,6 +62,7 @@
     "qx = qy = np.fft.fftfreq(n,sampling)\n",
     "q2 = qx[:,None]**2 + qy[None,:]**2\n",
     "q  = np.sqrt(q2)\n",
+    "theta = np.arctan2(qy[None,:],qx[:,None])\n",
     "\n",
     "probe_array_fourier_0 = np.sqrt(\n",
     "    np.clip(\n",
@@ -71,9 +72,87 @@
     "    ),\n",
     ")\n",
     "\n",
-    "unrolled_chi = np.pi * wavelength * q**2 * C10\n",
+    "def return_chi(\n",
+    "    q,\n",
+    "    theta,\n",
+    "    wavelength,\n",
+    "    C10,\n",
+    "    C12,\n",
+    "    phi12,\n",
+    "    C21,\n",
+    "    phi21,\n",
+    "    C30,\n",
+    "):\n",
+    "    \"\"\" \"\"\"\n",
+    "    prefactor = 2*np.pi / wavelength\n",
+    "    alpha = q*wavelength\n",
+    "    order_2 = alpha**2 / 2 * (C10 + C12*np.cos(2*(theta-phi12)))\n",
+    "    order_3 = alpha**3 / 3 * C21*np.cos(theta-phi21)\n",
+    "    order_4 = alpha**4 / 4 * C30\n",
+    "    \n",
+    "    return (order_2+order_3+order_4) * prefactor\n",
+    "\n",
+    "unrolled_chi = return_chi(\n",
+    "    q,\n",
+    "    theta,\n",
+    "    wavelength,\n",
+    "    C10=C10,\n",
+    "    C12=0,\n",
+    "    phi12=np.deg2rad(0),\n",
+    "    C21=0,\n",
+    "    phi21=np.deg2rad(0),\n",
+    "    C30=0\n",
+    ")\n",
+    "# unrolled_chi = return_chi(\n",
+    "#     q,\n",
+    "#     theta,\n",
+    "#     wavelength,\n",
+    "#     C10=100,\n",
+    "#     C12=0,\n",
+    "#     phi12=np.deg2rad(20),\n",
+    "#     C21=1000,\n",
+    "#     phi21=np.deg2rad(840),\n",
+    "#     C30=0\n",
+    "# )\n",
     "probe_array_fourier = probe_array_fourier_0 * np.exp(-1j * unrolled_chi)\n",
     "probe_array_fourier /= np.sqrt(np.sum(np.abs(probe_array_fourier)**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5f87ebf4-6a4a-46e2-82ca-f9e11b373ce6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from py4DSTEM.process.phase.utils import calculate_aberration_gradient_basis, polar_aberrations_to_cartesian\n",
+    "\n",
+    "# coefs = polar_aberrations_to_cartesian({\"C10\":100,\"C12\":0,\"phi12\":np.deg2rad(20),\"C21\":1000,\"phi21\":np.deg2rad(840)})\n",
+    "# chi, chi_du, chi_dv = calculate_aberration_gradient_basis(\n",
+    "#     [[1,0,0],[1,2,0],[1,2,1],[2,1,0],[2,1,1]],\n",
+    "#     (sampling,sampling),\n",
+    "#     (n,n),\n",
+    "#     wavelength,\n",
+    "# )\n",
+    "\n",
+    "# gradient_x = np.tensordot(\n",
+    "#     chi_du,\n",
+    "#     np.array(list(coefs.values())[:5]),\n",
+    "#     axes=1\n",
+    "# ).reshape((n,n))\n",
+    "\n",
+    "# gradient_y = np.tensordot(\n",
+    "#     chi_dv,\n",
+    "#     np.array(list(coefs.values())[:5]),\n",
+    "#     axes=1\n",
+    "# ).reshape((n,n))\n",
+    "\n",
+    "# qx_shift = -2j * np.pi * qx[:,None]\n",
+    "# qy_shift = -2j * np.pi * qy[None,:]\n",
+    "# shift_op = np.exp(\n",
+    "#     qx_shift[None,None] * gradient_x[:,:,None, None]\n",
+    "#     + qy_shift[None,None] * gradient_y[:,:,None, None]\n",
+    "# )"
    ]
   },
   {
@@ -86,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "94255fb5-7bb7-47b5-ab0a-48a372bf0050",
    "metadata": {},
    "outputs": [],
@@ -106,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "be5d9df8-fad3-45be-a44a-6beb654e88c4",
    "metadata": {},
    "outputs": [],
@@ -128,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "7ccd46e7-792b-4de7-8db7-c9bb86e797ac",
    "metadata": {},
    "outputs": [
@@ -189,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "a042a47c-fd70-4ca5-b0e8-235f06a2f533",
    "metadata": {},
    "outputs": [],
@@ -232,7 +311,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
+   "id": "2508e784-1e19-4929-b1b5-cd1762388947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def return_aperture_overlap_2(\n",
+    "#     normalized_aperture,\n",
+    "#     unrolled_chi,\n",
+    "#     ind_x,\n",
+    "#     ind_y,\n",
+    "# ):\n",
+    "#     \"\"\" \"\"\"\n",
+    "    \n",
+    "#     return (\n",
+    "#         np.exp(-1j*unrolled_chi) * np.roll(normalized_aperture,(ind_x,ind_y),(0,1))\n",
+    "#         - np.exp(1j*unrolled_chi) * np.roll(normalized_aperture,(-ind_x,-ind_y),(0,1))\n",
+    "#     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3234a9b3-6e4c-438d-bf0a-adcacc014086",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# large_gamma_array_2 = np.zeros((n,n,n,n),dtype=np.complex128)\n",
+    "# for ind_x in range(n):\n",
+    "#     for ind_y in range(n):\n",
+    "#         omega = q[ind_x,ind_y]\n",
+    "#         if omega < 2*q_probe:\n",
+    "            \n",
+    "#             large_gamma_array_2[...,ind_x,ind_y] = return_aperture_overlap_2(\n",
+    "#                 np.abs(probe_array_fourier),\n",
+    "#                 unrolled_chi,\n",
+    "#                 ind_x,\n",
+    "#                 ind_y\n",
+    "#             )\n",
+    "            \n",
+    "# large_gamma_array_2 *= np.abs(probe_array_fourier) \n",
+    "# large_gamma_array_3 = large_gamma_array_2 * shift_op.conj()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e672a91d-6603-45cf-b85d-cd1217210c19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# large_gamma_array = np.zeros((n,n,n,n),dtype=np.complex128)\n",
+    "# for ind_x in range(n):\n",
+    "#     for ind_y in range(n):\n",
+    "#         omega = q[ind_x,ind_y]\n",
+    "#         if omega < 2*q_probe:\n",
+    "#             large_gamma_array[ind_x,ind_y] = return_aperture_overlap(\n",
+    "#                 probe_array_fourier,\n",
+    "#                 ind_x,\n",
+    "#                 ind_y\n",
+    "#             )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a89ee36c-8691-47de-857f-e8cd7f4f36f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fig, axs = plt.subplots(1,3,figsize=(12,4))\n",
+    "\n",
+    "# axs[0].imshow(\n",
+    "#     ctf.complex_to_rgb(\n",
+    "#         np.fft.fftshift(\n",
+    "#             large_gamma_array[...,22,0]\n",
+    "#         )\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "# axs[1].imshow(\n",
+    "#     ctf.complex_to_rgb(\n",
+    "#         np.fft.fftshift(\n",
+    "#             large_gamma_array_2[...,22,0]\n",
+    "#         )\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "# axs[2].imshow(\n",
+    "#     ctf.complex_to_rgb(\n",
+    "#         np.fft.fftshift(\n",
+    "#             large_gamma_array_3[...,22,0]\n",
+    "#         )\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "# fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1a819a23-ea5e-45b3-96eb-f78a3a832a46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.imshow(\n",
+    "#     np.fft.fftshift(\n",
+    "#         large_gamma_array_2.sum((-1,-2)).imag / 2\n",
+    "#     )\n",
+    "# )\n",
+    "# plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "6a13902e-8725-4bdb-ac0c-53418bfc509d",
    "metadata": {},
    "outputs": [],
@@ -244,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "4fb6a21b-56a9-48b3-9222-0f12098a79c8",
    "metadata": {},
    "outputs": [],
@@ -258,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "id": "4f556ec0-deaf-4438-9d2d-cb3c635b9cce",
    "metadata": {},
    "outputs": [],
@@ -290,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "7d2065b9-5abe-44d6-99d8-9cc67e9a1312",
    "metadata": {},
    "outputs": [],
@@ -304,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "1e3af987-9ee1-4ae3-816f-1de26460ccd4",
    "metadata": {},
    "outputs": [],
