write phase methods intro text

--- a/refs.bib
+++ b/refs.bib
@@ -2,6 +2,7 @@
 @article{rose_nonstandard_1977,
 	title = {Nonstandard Imaging Methods in Electron Microscopy},
 	volume = {2},
+    doi = {10.1016/S0304-3991(76)91538-2},
 	pages = {251--267},
 	journaltitle = {Ultramicroscopy},
 	shortjournal = {Ultramicroscopy},
@@ -12,12 +13,29 @@
 @article{dekkers_differential_1974,
 	title = {Differential phase contrast in a {STEM}},
 	volume = {41},
+    issn = {00304026},
 	pages = {452--456},
 	number = {4},
 	journaltitle = {Optik},
 	author = {Dekkers, N. H. and De Lang, H.},
 	date = {1974},
 }
+
+
+@article{chapman_direct_1978,
+	title = {The direct determination of magnetic domain wall profiles by differential phase contrast electron microscopy},
+	volume = {3},
+	issn = {0304-3991},
+	url = {https://www.sciencedirect.com/science/article/pii/S0304399178800278},
+	doi = {10.1016/S0304-3991(78)80027-8},
+	pages = {203--214},
+	journaltitle = {Ultramicroscopy},
+	shortjournal = {Ultramicroscopy},
+	author = {Chapman, J. N. and Batson, P. E. and Waddell, E. M. and Ferrier, R. P.},
+	date = {1978-01-01},
+}
+
+
 
 @article{yang_enhanced_2016,
 	title = {Enhanced phase contrast transfer using ptychography combined with a pre-specimen phase plate in a scanning transmission electron microscope},
@@ -242,6 +260,18 @@
 	date = {2024-09-13},
 }
 
+@article{seki_linear_2022,
+	title = {Linear imaging theory for differential phase contrast and other phase imaging modes in scanning transmission electron microscopy},
+	volume = {240},
+	issn = {0304-3991},
+	url = {https://www.sciencedirect.com/science/article/pii/S0304399122001103},
+	doi = {10.1016/j.ultramic.2022.113580},
+	pages = {113580},
+	journaltitle = {Ultramicroscopy},
+	shortjournal = {Ultramicroscopy},
+	author = {Seki, Takehito and Khare, Kushagra and Murakami, Yoshiki O. and Toyama, Satoko and Sánchez-Santolino, Gabriel and Sasaki, Hirokazu and Findlay, Scott D. and Petersen, Timothy C. and Ikuhara, Yuichi and Shibata, Naoya},
+	date = {2022-10-01},
+}
 
 
 
