--- a/refs.bib
+++ b/refs.bib
@@ -237,17 +237,6 @@
 }
 
 
-
-
-@article{bekkevold2024ultra,
-  title={Ultra-fast Digital DPC Yielding High Spatio-temporal Resolution for Low-Dose Phase Characterization},
-  author={Bekkevold, Julie Marie and Peters, Jonathan JP and Ishikawa, Ryo and Shibata, Naoya and Jones, Lewys},
-  journal={Microscopy and Microanalysis},
-  pages={ozae082},
-  year={2024},
-  publisher={Oxford University Press US}
-}
-
 @article{bekkevold_ultra-fast_2024,
 	title = {Ultra-fast Digital {DPC} Yielding High Spatio-temporal Resolution for Low-Dose Phase Characterization},
 	volume = {30},
@@ -256,9 +245,11 @@
 	pages = {878--888},
 	number = {5},
 	journaltitle = {Microscopy and Microanalysis},
+	shortjournal = {Microscopy and Microanalysis},
 	author = {Bekkevold, Julie Marie and Peters, Jonathan J P and Ishikawa, Ryo and Shibata, Naoya and Jones, Lewys},
 	date = {2024-09-13},
 }
+
 
 @article{seki_linear_2022,
 	title = {Linear imaging theory for differential phase contrast and other phase imaging modes in scanning transmission electron microscopy},
