--- a/refs.bib
+++ b/refs.bib
@@ -264,7 +264,18 @@
 	date = {2022-10-01},
 }
 
-
+@article{rodenburg_wdd_1992,
+author = {Rodenburg, J. M.  and Bates, R. H. T. },
+title = {The theory of super-resolution electron microscopy via Wigner-distribution deconvolution},
+journal = {Philosophical Transactions of the Royal Society of London. Series A: Physical and Engineering Sciences},
+volume = {339},
+number = {1655},
+pages = {521-553},
+year = {1992},
+doi = {10.1098/rsta.1992.0050},
+URL = {https://royalsocietypublishing.org/doi/abs/10.1098/rsta.1992.0050},
+eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsta.1992.0050},
+}
 
 
 
