--- a/notebooks/08_segmented-parallax.ipynb
+++ b/notebooks/08_segmented-parallax.ipynb
@@ -63,7 +63,7 @@
     "cmap = cmr.eclipse\n",
     "sample_cmap = 'gray'\n",
     "\n",
-    "segmented_icom_line_color = 'cornflowerblue'\n",
+    "# segmented_icom_line_color = 'cornflowerblue'\n",
     "segmented_parallax_line_color = 'darksalmon'\n",
     "pixelated_parallax_line_color = 'darkred'"
    ]
@@ -209,9 +209,7 @@
     "\n",
     "ints, probe = simulate_intensities(C10=C10)\n",
     "intensities = [ints]\n",
-    "probe_array_fourier = [probe]\n",
-    "# precompute sum needed for DPC\n",
-    "intensities_sum = [intensities[0].sum((-1,-2))]"
+    "probe_array_fourier = [probe]"
    ]
   },
   {
@@ -253,43 +251,7 @@
     "\n",
     "    angular_bins = [np.fft.fftshift((angular_bins == i).astype(\"int\")) for i in range(1,n_angular_bins+1)]\n",
     "    \n",
-    "    return angular_bins\n",
-    "\n",
-    "def compute_com_using_virtual_detectors(\n",
-    "    corner_centered_intensities,\n",
-    "    center_centered_masks,\n",
-    "    corner_centered_intensities_sum,\n",
-    "    sx,sy,\n",
-    "    kxa,kya,\n",
-    "):\n",
-    "    \"\"\" \"\"\"\n",
-    "\n",
-    "    masks = np.fft.ifftshift(np.asarray(center_centered_masks),axes=(-1,-2))\n",
-    "    \n",
-    "    com_x = np.zeros((sx,sy))\n",
-    "    com_y = np.zeros((sx,sy))\n",
-    "\n",
-    "    kx = ky = np.fft.fftfreq(n,sampling).astype(np.float32)\n",
-    "    kxa, kya = np.meshgrid(kx, ky, indexing='ij')\n",
-    "    \n",
-    "    for mask in masks:\n",
-    "        kxa_i,kya_i=np.where(mask)\n",
-    "        patches= corner_centered_intensities[:,:,kxa_i,kya_i].sum(-1) / corner_centered_intensities_sum\n",
-    "        com_x += patches * np.mean(kxa[kxa_i,kya_i])\n",
-    "        com_y += patches * np.mean(kya[kxa_i,kya_i])\n",
-    "        \n",
-    "    return com_x, com_y\n",
-    "\n",
-    "def integrate_com(\n",
-    "    com_x,\n",
-    "    com_y,\n",
-    "    kx_op,\n",
-    "    ky_op,\n",
-    "):\n",
-    "    \"\"\" \"\"\"\n",
-    "\n",
-    "    icom_fft = np.fft.fft2(com_x)*kx_op + np.fft.fft2(com_y)*ky_op\n",
-    "    return np.real(np.fft.ifft2(icom_fft))"
+    "    return angular_bins"
    ]
   },
   {
@@ -313,11 +275,7 @@
     "\n",
     "k2 = kxa**2 + kya**2\n",
     "k = np.sqrt(k2)\n",
-    "k2[0, 0] = np.inf\n",
-    "\n",
-    "# iCoM operators\n",
-    "kx_op = -1.0j * kxa / k2\n",
-    "ky_op = -1.0j * kya / k2"
+    "k2[0, 0] = np.inf"
    ]
   },
   {
@@ -335,23 +293,7 @@
     "    inner_radius=q_probe/2,\n",
     "    outer_radius=q_probe*1.05,\n",
     "    rotation_offset=0,\n",
-    ")   \n",
-    "\n",
-    "com_x, com_y = compute_com_using_virtual_detectors(\n",
-    "    intensities[0],\n",
-    "    virtual_masks_annular,\n",
-    "    intensities_sum[0],\n",
-    "    sx,sy,\n",
-    "    kxa,kya,\n",
-    ")\n",
-    "\n",
-    "icom_annular = integrate_com(com_x,com_y,kx_op,ky_op)\n",
-    "ctf_annular = ctf.compute_ctf(icom_annular) \n",
-    "\n",
-    "q_bins_annular, I_bins_annular = ctf.radially_average_ctf(\n",
-    "    ctf_annular,\n",
-    "    (sampling,sampling)\n",
-    ")"
+    ") "
    ]
   },
   {
@@ -371,7 +313,17 @@
     "):\n",
     "    \"\"\" \"\"\"\n",
     "    corner_shifted_masks = np.fft.ifftshift(virtual_masks_annular)\n",
-    "    num_masks = corner_shifted_masks.shape[0]\n",
+    "    corner_shifted_bf_masks = []\n",
+    "    for mask in corner_shifted_masks:\n",
+    "        kxa_i,kya_i=np.where(mask)\n",
+    "        centroid_norm = k[kxa_i,kya_i].mean()\n",
+    "        if centroid_norm <= q_probe*1.05 or number_of_rings_slider.value == 1:\n",
+    "            corner_shifted_bf_masks.append(mask)\n",
+    "    corner_shifted_bf_masks = np.array(corner_shifted_bf_masks)\n",
+    "    \n",
+    "    num_masks = corner_shifted_bf_masks.shape[0]\n",
+    "    vbfs = np.empty((num_masks,n,n))\n",
+    "    shifts_ang = np.empty((num_masks,2))\n",
     "\n",
     "    grad_x, grad_y = np.meshgrid(\n",
     "        kx * wavelength * C10,\n",
@@ -379,9 +331,7 @@
     "        indexing='ij'\n",
     "    )\n",
     "\n",
-    "    vbfs = np.empty((num_masks,n,n))\n",
-    "    shifts_ang = np.empty((num_masks,2))\n",
-    "    for i, mask in enumerate(corner_shifted_masks):\n",
+    "    for i, mask in enumerate(corner_shifted_bf_masks):\n",
     "        kxa_i,kya_i=np.where(mask)\n",
     "        vbf = intensities[...,kxa_i,kya_i].sum(-1)\n",
     "        vbfs[i] = vbf / vbf.mean() - 1\n",
@@ -483,9 +433,9 @@
     "im_detector = ax_detector.imshow(ctf.combined_images_rgb(virtual_masks_annular))\n",
     "ctf.add_scalebar(ax_detector,length=n//4,sampling=reciprocal_sampling,units=r'$q_{\\mathrm{probe}}$')\n",
     "\n",
-    "# annular CTF\n",
+    "# analytical CTF\n",
     "ax_ctf_annular = axs[0,1]\n",
-    "im_ctf = ax_ctf_annular.imshow(ctf.histogram_scaling(np.fft.fftshift(ctf_annular),normalize=True),cmap=cmap)\n",
+    "im_ctf = ax_ctf_annular.imshow(ctf.histogram_scaling(np.fft.fftshift(analytical_parallax_ctf),normalize=True),cmap=cmap)\n",
     "\n",
     "# annular parallax\n",
     "ax_ctf_parallax = axs[0,2]\n",
@@ -493,7 +443,6 @@
     "\n",
     "# CTF radially-averaged\n",
     "ax_ctf_rad = axs[0,3]\n",
-    "plot_ctf = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=segmented_icom_line_color,label='segmented iCOM')[0]\n",
     "plot_ctf_parallax_analytic = ax_ctf_rad.plot(q_bins_parallax_analytic,I_bins_parallax_analytic,color=pixelated_parallax_line_color,label='pixelated tcBF')[0]\n",
     "plot_ctf_parallax = ax_ctf_rad.plot(q_bins_parallax,I_bins_parallax,color=segmented_parallax_line_color,label='segmented tcBF')[0]\n",
     "ax_ctf_rad.legend()\n",
@@ -531,7 +480,7 @@
     "ax_white_noise_obj = axs[1,0]\n",
     "im_white_noise_obj = ax_white_noise_obj.imshow(\n",
     "    ctf.histogram_scaling(\n",
-    "        np.fft.ifft2(np.fft.fft2(potential) * ctf_annular).real,\n",
+    "        np.fft.ifft2(np.fft.fft2(potential) * ctf_parallax).real,\n",
     "        normalize=True\n",
     "    ),\n",
     "    cmap=sample_cmap\n",
@@ -539,7 +488,7 @@
     "ctf.add_scalebar(ax_white_noise_obj,length=n//5,sampling=sampling,units=r'Å')\n",
     "\n",
     "zero_pad_ctf_to_4qprobe = np.fft.ifftshift(\n",
-    "    np.pad(np.fft.fftshift(ctf_annular),48)\n",
+    "    np.pad(np.fft.fftshift(ctf_parallax),48)\n",
     ")\n",
     "resample_2qprobe_ctf_to_192  = np.fft.fft2(\n",
     "    np.fft.ifftshift(\n",
@@ -620,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "68fa9425",
    "metadata": {},
    "outputs": [],
@@ -630,17 +579,17 @@
     "kwargs = {'style':style,'layout':layout,'continuous_update':False}\n",
     "\n",
     "inner_collection_angle_slider = ipywidgets.FloatSlider(\n",
-    "    value = q_probe/2,\n",
+    "    value = q_probe/4,\n",
     "    min = 0,\n",
-    "    max = q_probe, \n",
+    "    max = q_probe/2, \n",
     "    step = q_probe/20,\n",
     "    description = r\"inner collection angle [$q_{\\mathrm{probe}}$]\",\n",
     "    **kwargs\n",
     ")\n",
     "\n",
     "outer_collection_angle_slider = ipywidgets.FloatSlider(\n",
-    "    value = q_probe*1.05, \n",
-    "    min = q_probe/20, \n",
+    "    value = q_probe + q_probe/20, \n",
+    "    min = q_probe/2 + q_probe/10, \n",
     "    max = q_max, \n",
     "    step = q_probe/20,\n",
     "    description = r\"outer collection angle [$q_{\\mathrm{probe}}$]\",\n",
@@ -684,16 +633,16 @@
     "    layout=ipywidgets.Layout(width=\"155px\",height=\"30px\")\n",
     ")\n",
     "\n",
-    "def update_outer_collection_angle(change):\n",
-    "    value = change['new']\n",
-    "    outer_collection_angle_slider.min = value*1.05\n",
+    "# def update_outer_collection_angle(change):\n",
+    "#     value = change['new']\n",
+    "#     outer_collection_angle_slider.min = value*1.05\n",
     "\n",
-    "def update_inner_collection_angle(change):\n",
-    "    value = change['new']\n",
-    "    inner_collection_angle_slider.max = value\n",
+    "# def update_inner_collection_angle(change):\n",
+    "#     value = change['new']\n",
+    "#     inner_collection_angle_slider.max = value\n",
     "\n",
-    "inner_collection_angle_slider.observe(update_outer_collection_angle, names='value')\n",
-    "outer_collection_angle_slider.observe(update_inner_collection_angle, names='value')\n",
+    "# inner_collection_angle_slider.observe(update_outer_collection_angle, names='value')\n",
+    "# outer_collection_angle_slider.observe(update_inner_collection_angle, names='value')\n",
     "\n",
     "# rotation offset is modulo 180/n\n",
     "def update_rotation_offset_range(change):\n",
@@ -763,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "d0d505b4",
    "metadata": {},
    "outputs": [],
@@ -803,23 +752,9 @@
     "            )\n",
     "        )\n",
     "    virtual_masks_annular = np.vstack(virtual_masks_annular)\n",
-    "    \n",
-    "    com_x, com_y = compute_com_using_virtual_detectors(\n",
-    "        intensities[0],\n",
-    "        virtual_masks_annular,\n",
-    "        intensities_sum[0],\n",
-    "        sx,sy,\n",
-    "        kxa,kya,\n",
-    "    )\n",
-    "\n",
-    "    icom_annular = integrate_com(com_x,com_y,kx_op,ky_op)\n",
-    "    ctf_annular = ctf.compute_ctf(icom_annular) \n",
-    "\n",
-    "    q_bins_annular, I_bins_annular = ctf.radially_average_ctf(\n",
-    "        ctf_annular,\n",
-    "        (sampling,sampling)\n",
-    "    )\n",
-    "\n",
+    "    # only keep nonzeero masks\n",
+    "    virtual_masks_annular = virtual_masks_annular[virtual_masks_annular.sum((-1,-2))>0]\n",
+    " \n",
     "    parallax_annular = return_segmented_parallax_ctf(\n",
     "        intensities[0],\n",
     "        virtual_masks_annular,\n",
@@ -835,11 +770,9 @@
     "    # update data\n",
     "    # 2D arrays\n",
     "    im_detector.set_data(ctf.combined_images_rgb(virtual_masks_annular))\n",
-    "    im_ctf.set_data(ctf.histogram_scaling(np.fft.fftshift(ctf_annular),normalize=True))\n",
     "    im_ctf_parallax.set_data(ctf.histogram_scaling(np.fft.fftshift(ctf_parallax),normalize=True))\n",
     "\n",
     "    # set radial average\n",
-    "    plot_ctf.set_ydata(I_bins_annular)\n",
     "    plot_ctf_parallax.set_ydata(I_bins_parallax)\n",
     "\n",
     "    # collections (vlines)\n",
@@ -908,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "0a362424-6bcc-407f-989e-8482d066b853",
    "metadata": {},
    "outputs": [],
@@ -930,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "3639cc18-73ed-4008-af56-33a847821dad",
    "metadata": {},
    "outputs": [],
@@ -956,14 +889,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "b4e23fec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "168f55bb816a40d4bc73c204f9a55675",
+       "model_id": "57757f12f4574ac6aa8af23bba0cd015",
        "version_major": 2,
        "version_minor": 0
       },
@@ -971,7 +904,7 @@
        "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=46, continuous_update=False, description='negativ…"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6327c7bd-73f1-46e1-9f62-72e0f1d7ef8c",
+   "id": "faa442e8-93b3-4c1b-b12c-186c4ed685e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1006,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af8b3917-b9b1-47f0-afa6-daadab596132",
+   "id": "ec94dbaf-989d-4858-b3d3-03c29105622e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1028,7 +961,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
