--- a/notebooks/07_segmented-SSB.ipynb
+++ b/notebooks/07_segmented-SSB.ipynb
@@ -400,7 +400,7 @@
     "                \n",
     "                if use_OBF_weighting:\n",
     "                    d = probe_normalization[gamma_ind]\n",
-    "                    normalization = d * np.sqrt(np.sum(normalization**2 /d))\n",
+    "                    normalization = d * np.sqrt(np.sum(normalization**2 / d))\n",
     "                    \n",
     "                psi[ind_x,ind_y] = (G[gamma_ind] *  np.conj(gamma[gamma_ind])/normalization).sum()\n",
     "\n",
@@ -483,7 +483,7 @@
     "    use_OBF_weighting=False,\n",
     ")\n",
     "\n",
-    "numeric_ctf_0 = np.abs(np.fft.fft2(np.angle(recon_0)))\n",
+    "numeric_ctf_0 = np.abs(np.fft.fft2(np.angle(recon_0))) / 2\n",
     "numeric_ctf_0[0,0] = 0.0\n",
     "\n",
     "q_bins_pixelated, I_bins_pixelated = ctf.radially_average_ctf(numeric_ctf_0,(sampling,sampling))"
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "82f3fcc2-ae1f-4a96-9beb-f27c7f47c8b5",
    "metadata": {},
    "outputs": [],
@@ -612,12 +612,12 @@
     "fig.canvas.layout.width = '640px'\n",
     "fig.canvas.layout.height = '420px'\n",
     "fig.tight_layout()\n",
-    "# fig"
+    "None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "f76ba5fb-d77d-462e-810b-f13424740697",
    "metadata": {},
    "outputs": [],
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "163a770e-5abb-4ab1-a8b2-c93a70d5d43c",
    "metadata": {},
    "outputs": [],
@@ -842,7 +842,7 @@
     "        use_OBF_weighting= use_OBF_weighting,\n",
     "    )\n",
     "    \n",
-    "    numeric_ctf_0 = np.abs(np.fft.fft2(np.angle(recon_0)))\n",
+    "    numeric_ctf_0 = ctf.compute_ctf(np.angle(recon_0)) / 2\n",
     "    numeric_ctf_0[0,0] = 0.0\n",
     "    \n",
     "    q_bins_pixelated, I_bins_pixelated = ctf.radially_average_ctf(numeric_ctf_0,(sampling,sampling))\n",
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "17bf2470-4a2e-4bef-ad08-5d49f783e07e",
    "metadata": {},
    "outputs": [],
@@ -878,7 +878,7 @@
     "        pbar=pbar,\n",
     "    )\n",
     "\n",
-    "    numeric_ctf = np.abs(np.fft.fft2(np.angle(recon)))\n",
+    "    numeric_ctf = ctf.compute_ctf(np.angle(recon)) / 2\n",
     "    numeric_ctf[0,0] = 0.0\n",
     "    \n",
     "    im_ctf.set_data(\n",
@@ -932,7 +932,7 @@
     "    plot_ctf.set_ydata(I_bins)\n",
     "\n",
     "    if recon_0 is not None:\n",
-    "        numeric_ctf_0 = np.abs(np.fft.fft2(np.angle(recon_0)))\n",
+    "        numeric_ctf_0 = ctf.compute_ctf(np.angle(recon_0)) / 2\n",
     "        numeric_ctf_0[0,0] = 0.0       \n",
     "    \n",
     "        q_bins_pixelated, I_bins_pixelated = ctf.radially_average_ctf(numeric_ctf_0,(sampling,sampling))\n",
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "4f1b0d36-99e8-4384-9f56-405e96bf896f",
    "metadata": {},
    "outputs": [],
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "cdf70485-bf65-4c95-99f8-6c1972ea4800",
    "metadata": {},
    "outputs": [],
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "667cd180-c2ad-4e47-8529-e5fcad8e512c",
    "metadata": {},
    "outputs": [],
@@ -1108,7 +1108,7 @@
     "        use_OBF_weighting= change.new,\n",
     "    )\n",
     "    \n",
-    "    numeric_ctf_0 = np.abs(np.fft.fft2(np.angle(recon_0)))\n",
+    "    numeric_ctf_0 = ctf.compute_ctf(np.angle(recon_0)) / 2\n",
     "    numeric_ctf_0[0,0] = 0.0\n",
     "    \n",
     "    q_bins_pixelated, I_bins_pixelated = ctf.radially_average_ctf(numeric_ctf_0,(sampling,sampling))\n",
@@ -1132,14 +1132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "4841e37d-e983-4204-ba48-f56099a1647f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39a09c98ad204abc9f9689f3b5f1a4cd",
+       "model_id": "3962fa17436d42e48e301941bb5249ce",
        "version_major": 2,
        "version_minor": 0
       },
