adding segmeted tcBF page

--- a/notebooks/08_segmented-parallax.ipynb
+++ b/notebooks/08_segmented-parallax.ipynb
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "68fa9425",
    "metadata": {},
    "outputs": [],
@@ -675,7 +675,6 @@
     "def defocus_wrapper(*args):\n",
     "    im_ctf.set_alpha(0.25)\n",
     "    im_ctf_parallax.set_alpha(0.25)\n",
-    "    plot_ctf.set_alpha(0.25)\n",
     "    plot_ctf_parallax.set_alpha(0.25)\n",
     "    plot_ctf_parallax_analytic.set_alpha(0.25)\n",
     "    im_white_noise_obj.set_alpha(0.25)\n",
@@ -698,7 +697,6 @@
     "    )\n",
     "    im_ctf.set_alpha(1)\n",
     "    im_ctf_parallax.set_alpha(1)\n",
-    "    plot_ctf.set_alpha(1)\n",
     "    plot_ctf_parallax.set_alpha(1)\n",
     "    plot_ctf_parallax_analytic.set_alpha(1)\n",
     "    im_white_noise_obj.set_alpha(1)\n",
@@ -712,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "d0d505b4",
    "metadata": {},
    "outputs": [],
@@ -841,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "0a362424-6bcc-407f-989e-8482d066b853",
    "metadata": {},
    "outputs": [],
@@ -855,7 +853,6 @@
     "    )\n",
     "\n",
     "    update_analytical()\n",
-    "    \n",
     "    update_figure(\"dummy\")\n",
     "    \n",
     "    return None"
@@ -863,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "3639cc18-73ed-4008-af56-33a847821dad",
    "metadata": {},
    "outputs": [],
@@ -871,11 +868,11 @@
     "def update_analytical():\n",
     "    \"\"\" \"\"\"\n",
     "    \n",
-    "    intensities_sum[0] = intensities[0].sum((-1,-2))\n",
-    "\n",
     "    analytical_parallax_ctf = return_analytical_parallax_ctf(\n",
     "        defocus_slider.value\n",
     "    )\n",
+    "    \n",
+    "    im_ctf.set_data(ctf.histogram_scaling(np.fft.fftshift(analytical_parallax_ctf),normalize=True))\n",
     "    \n",
     "    # Radially-averaged CTF\n",
     "    q_bins_parallax_analytic, I_bins_parallax_analytic = ctf.radially_average_ctf(analytical_parallax_ctf,(sampling,sampling))\n",
@@ -889,14 +886,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "b4e23fec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57757f12f4574ac6aa8af23bba0cd015",
+       "model_id": "67484c9a7c784bc0bcd4305a81b06bbf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -904,7 +901,7 @@
        "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=46, continuous_update=False, description='negativ…"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
