segmented ssb updates (faster)

--- a/notebooks/07_segmented-SSB.ipynb
+++ b/notebooks/07_segmented-SSB.ipynb
@@ -323,7 +323,7 @@
     "virtual_masks_annular = [np.zeros((n,n))]\n",
     "virtual_masks_annular[0][0,0] = 1\n",
     "\n",
-    "masked_intensities_FFT = [np.zeros_like(intensities[0])]\n",
+    "masked_intensities_FFT = [np.zeros_like(intensities_FFT[0])]\n",
     "masked_intensities_FFT[0][0,0] = 1"
    ]
   },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "82f3fcc2-ae1f-4a96-9beb-f27c7f47c8b5",
    "metadata": {},
    "outputs": [],
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "f76ba5fb-d77d-462e-810b-f13424740697",
    "metadata": {},
    "outputs": [],
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "163a770e-5abb-4ab1-a8b2-c93a70d5d43c",
    "metadata": {},
    "outputs": [],
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "17bf2470-4a2e-4bef-ad08-5d49f783e07e",
    "metadata": {},
    "outputs": [],
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "4f1b0d36-99e8-4384-9f56-405e96bf896f",
    "metadata": {},
    "outputs": [],
@@ -1006,14 +1006,22 @@
     "\n",
     "    virtual_masks_annular[0] = np.vstack(_virtual_masks_annular)\n",
     "    \n",
+    "    # Previously: mask intensities and then take FFT\n",
+    "    # mask_intensities_using_virtual_detectors(\n",
+    "    #     intensities[0],\n",
+    "    #     masked_intensities_FFT[0],\n",
+    "    #     virtual_masks_annular[0]\n",
+    "    # )\n",
+    "\n",
+    "    # masked_intensities_FFT[0] = np.fft.fft2(masked_intensities_FFT[0],axes=(0,1))\n",
+    "\n",
+    "    # Now: equivalently, mask intensities FFT directly -- thanks linearity\n",
     "    mask_intensities_using_virtual_detectors(\n",
-    "        intensities[0],\n",
+    "        intensities_FFT[0],\n",
     "        masked_intensities_FFT[0],\n",
     "        virtual_masks_annular[0]\n",
     "    )\n",
-    "\n",
-    "    masked_intensities_FFT[0] = np.fft.fft2(masked_intensities_FFT[0],axes=(0,1))\n",
-    "\n",
+    "   \n",
     "    ind = n//12 if frequencies_toggle.value else n//8\n",
     "\n",
     "    im_trotter_pixelated.set_data(\n",
@@ -1059,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "cdf70485-bf65-4c95-99f8-6c1972ea4800",
    "metadata": {},
    "outputs": [],
@@ -1093,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "667cd180-c2ad-4e47-8529-e5fcad8e512c",
    "metadata": {},
    "outputs": [],
@@ -1132,14 +1140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "4841e37d-e983-4204-ba48-f56099a1647f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3962fa17436d42e48e301941bb5249ce",
+       "model_id": "6c3807fea6084b29920f20fa0217c931",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1175,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5885c354-a5fd-4cb8-895e-ee0f116712b2",
+   "id": "a692e5d2-ee73-4bec-817d-fb291f416e29",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1197,7 +1205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
