updating icom SSNR widget

--- a/notebooks/13.2_old_icom_snr.ipynb
+++ b/notebooks/13.2_old_icom_snr.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: iCOM Contrast Transfer\n",
+    "title: iCOM SSNR Widget\n",
     "authors: [Julie Marie Bekkevold, Georgios Varnavides]\n",
-    "date: 2024-09-30\n",
+    "date: 2025-05-12\n",
     "---"
    ]
   },
@@ -61,7 +61,8 @@
     "phi0 = 1.0\n",
     "\n",
     "cmap = cmr.eclipse\n",
-    "icom_line_color = 'cornflowerblue'"
+    "segmented_icom_line_color = 'cornflowerblue'\n",
+    "pixelated_icom_line_color = 'midnightblue'"
    ]
   },
   {
@@ -390,17 +391,17 @@
     "\n",
     "# analytic SNR radially-averaged\n",
     "ax_snr_rad = axs[3]\n",
-    "plot_snr_analytic = ax_snr_rad.plot(q_bins_analytic_snr,I_bins_analytic_snr,color='k')[0]\n",
-    "plot_snr = ax_snr_rad.plot(q_bins_annular_snr, I_bins_annular_snr, color=icom_line_color)[0]\n",
+    "plot_snr_analytic = ax_snr_rad.plot(q_bins_analytic_snr,I_bins_analytic_snr,color=pixelated_icom_line_color)[0]\n",
+    "plot_snr = ax_snr_rad.plot(q_bins_annular_snr, I_bins_annular_snr, color=segmented_icom_line_color)[0]\n",
     "\n",
     "# remove ticks, add titles to 2D-plots\n",
     "for ax, title in zip(\n",
     "    axs.T.flatten(),\n",
     "    [\n",
     "        \"detector geometry\",\n",
-    "        \"analytical SNR\",\n",
-    "        \"annular SNR\",\n",
-    "        \"radially averaged SNRs\"\n",
+    "        \"pixelated SSNR\",\n",
+    "        \"segmented SSNR\",\n",
+    "        \"radially averaged SSNR\"\n",
     "    ]\n",
     "):\n",
     "    ax.set_xticks([])\n",
@@ -489,7 +490,7 @@
     "    min = 3, \n",
     "    max = 16, \n",
     "    step = 1,\n",
-    "    description = \"number of segments\",\n",
+    "    description = \"number of annular segments\",\n",
     "    **kwargs\n",
     ")\n",
     "\n",
@@ -497,6 +498,28 @@
     "    value = 0, min = 0, max = 180/4, step = 1,\n",
     "    description = \"rotation offset [°]\",\n",
     "    **kwargs\n",
+    ")\n",
+    "\n",
+    "number_of_rings_slider = ipywidgets.IntSlider(\n",
+    "    value = 1, \n",
+    "    min = 1, \n",
+    "    max = 8, \n",
+    "    step = 1,\n",
+    "    description = \"number of radial rings\",\n",
+    "    **kwargs\n",
+    ")\n",
+    "\n",
+    "rotate_half_the_rings = ipywidgets.ToggleButton(\n",
+    "    value = False,\n",
+    "    description = 'offset radial rings',\n",
+    "    disabled = False,\n",
+    "    layout=ipywidgets.Layout(width=\"155px\",height=\"30px\")\n",
+    ")\n",
+    "\n",
+    "area_toggle = ipywidgets.ToggleButton(\n",
+    "    value = False,\n",
+    "    description = 'distribute by area',\n",
+    "    layout=ipywidgets.Layout(width=\"155px\",height=\"30px\")\n",
     ")\n",
     "\n",
     "def update_outer_collection_angle(change):\n",
@@ -522,6 +545,9 @@
     "    outer_collection_angle_slider.disabled = boolean\n",
     "    number_of_segments_slider.disabled = boolean\n",
     "    rotation_offset_slider.disabled = boolean\n",
+    "    number_of_rings_slider.disabled = boolean\n",
+    "    rotate_half_the_rings.disabled = boolean\n",
+    "    area_toggle.disabled = boolean\n",
     "    defocus_slider.disabled = boolean\n",
     "    simulate_button.disabled = boolean\n",
     "    return None\n",
@@ -531,7 +557,7 @@
     "    min = -n,\n",
     "    max = n,\n",
     "    step = 1,\n",
-    "    description = r'defocus [Å]',\n",
+    "    description = r'negative defocus, $C_{1,0}$ [Å]',\n",
     "    **kwargs\n",
     ")\n",
     "\n",
@@ -575,14 +601,36 @@
     "    \"\"\" \"\"\"\n",
     "\n",
     "    # compute new datasets\n",
-    "    virtual_masks_annular = annular_segmented_detectors(\n",
-    "        gpts=(n,n),\n",
-    "        sampling=(sampling,sampling),\n",
-    "        n_angular_bins=number_of_segments_slider.value,\n",
-    "        inner_radius=inner_collection_angle_slider.value,\n",
-    "        outer_radius=outer_collection_angle_slider.value,\n",
-    "        rotation_offset=np.deg2rad(rotation_offset_slider.value),\n",
-    "    )   \n",
+    "    virtual_masks_annular = []\n",
+    "    if area_toggle.value:\n",
+    "        ring_collection_angles = np.linspace(\n",
+    "            inner_collection_angle_slider.value**2,\n",
+    "            outer_collection_angle_slider.value**2,\n",
+    "            num=number_of_rings_slider.value + 1\n",
+    "        )**(1/2)\n",
+    "    else:\n",
+    "        ring_collection_angles = np.linspace(\n",
+    "            inner_collection_angle_slider.value,\n",
+    "            outer_collection_angle_slider.value,\n",
+    "            num=number_of_rings_slider.value + 1\n",
+    "        )\n",
+    "    if rotate_half_the_rings.value:\n",
+    "        ring_rotation = np.deg2rad((180/number_of_segments_slider.value))\n",
+    "    else:\n",
+    "        ring_rotation = 0\n",
+    "    for i in range(1,number_of_rings_slider.value+1):\n",
+    "        j = i-1\n",
+    "        virtual_masks_annular.append(\n",
+    "            annular_segmented_detectors(\n",
+    "                gpts=(n,n),\n",
+    "                sampling=(sampling,sampling),\n",
+    "                n_angular_bins=number_of_segments_slider.value,\n",
+    "                inner_radius=ring_collection_angles[j],\n",
+    "                outer_radius=ring_collection_angles[i],\n",
+    "                rotation_offset=np.deg2rad(rotation_offset_slider.value) + ring_rotation*(j%2),\n",
+    "            )\n",
+    "        )\n",
+    "    virtual_masks_annular = np.vstack(virtual_masks_annular)\n",
     "    \n",
     "    com_x, com_y = compute_com_using_virtual_detectors(\n",
     "        intensities[0],\n",
@@ -618,7 +666,10 @@
     "inner_collection_angle_slider.observe(update_figure,names='value')\n",
     "outer_collection_angle_slider.observe(update_figure,names='value')\n",
     "number_of_segments_slider.observe(update_figure,names='value')\n",
-    "rotation_offset_slider.observe(update_figure,names='value')"
+    "rotation_offset_slider.observe(update_figure,names='value')\n",
+    "number_of_rings_slider.observe(update_figure,names='value')\n",
+    "rotate_half_the_rings.observe(update_figure,names='value')\n",
+    "area_toggle.observe(update_figure,names='value')"
    ]
   },
   {
@@ -688,12 +739,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c66ee0d899bb4af186455d37636067fe",
+       "model_id": "5c94052bd26e417b90b4019f298c93f1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=0, continuous_update=False, description='defocus …"
+       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=0, continuous_update=False, description='negative…"
       ]
      },
      "metadata": {},
@@ -710,8 +761,10 @@
     "            ipywidgets.VBox(\n",
     "                [\n",
     "                    ipywidgets.HBox([defocus_slider, simulate_button]),\n",
+    "                    ipywidgets.HTML(\"<hr>\",layout=ipywidgets.Layout(width=\"640px\")),\n",
     "                    ipywidgets.HBox([inner_collection_angle_slider,outer_collection_angle_slider]),\n",
     "                    ipywidgets.HBox([number_of_segments_slider,rotation_offset_slider]),\n",
+    "                    ipywidgets.HBox([number_of_rings_slider,rotate_half_the_rings,area_toggle]),\n",
     "                ]\n",
     "            ),\n",
     "            fig.canvas\n",
@@ -719,22 +772,6 @@
     "    )\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e842e8f-526c-4679-8e69-78dec1e13469",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b45236a6-f148-4c54-b548-4d76a5099f38",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -761,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
